--- a/assets/sass/config/_mixins.sass
+++ b/assets/sass/config/_mixins.sass
@@ -382,6 +382,7 @@
   padding: 0.55em 1em 0.5em
   border-radius: 0.75em
   line-height: 1.15
+  white-space: nowrap
   +v-gradient(#ff4e6c, #d83742)
   &::before
     content: ''
