--- a/assets/sass/modules/_bootstrap-custom.sass
+++ b/assets/sass/modules/_bootstrap-custom.sass
@@ -35,6 +35,8 @@ input, button, select, optgroup, textarea
   width: calc(100% - 100px)
   max-width: 1400px
   padding: 0
+  +media-max(1399px)
+    width: calc(100% - 60px)
 
 // list unstyling
 .list-unstyled
