--- a/assets/sass/config/_variables.scss
+++ b/assets/sass/config/_variables.scss
@@ -2,6 +2,9 @@
 //  custom variables
 // -------------------------------------------
 
+// size
+$min-width: 1280px;
+
 // fonts
 $poppins: 'Poppins', 'Helvetica Neue', 'Arial', sans-serif;
 $barlow: 'Barlow Condensed', 'Helvetica Neue', 'Arial', sans-serif;
