--- a/assets/sass/projects/_layout.sass
+++ b/assets/sass/projects/_layout.sass
@@ -3,7 +3,7 @@
   ------------------------------------------ */
 
 .wp
-  min-width: 1200px
+  min-width: $min-width
 
 /* -------------------------------------------
    header
@@ -15,6 +15,7 @@
   top: 0
   left: 0
   right: 0
+  min-width: $min-width
   .header-topbar
     position: relative
     +h-gradient(#4e65ff, #74E7FB 68%, #688ffc)
@@ -83,7 +84,6 @@
             +transition-timing-function(ease-in-out)
             .ml-dd-inner
               height: 300px
-              padding: 0 30px
               > div
                 +flex-shrink(0)
             .category-list
@@ -212,7 +212,6 @@
               visibility: visible
               opacity: 1
     .topbar-user
-      padding-right: 15px
       .dropdown
         .dropdown-menu
           display: block
@@ -270,6 +269,7 @@
             font-size: 14px
             font-weight: 700
         .user-more
+          min-width: 155px
           .user-more-deposit
             font-size: 15px
           .user-more-toggle
@@ -279,6 +279,34 @@
               display: none
           .user-more-dropdown
             width: 245px
+            .dropdown-divider
+              border-top-color: #f5f5f5
+            .link-btn
+              position: relative
+              display: block
+              .link-btn-inner
+                position: relative
+              &::before
+                content: ''
+                position: absolute
+                top: -10px
+                left: -10px
+                right: -10px
+                bottom: -10px
+                display: block
+                visibility: hidden
+                opacity: 0
+                background-color: #f8f8f8
+                border-radius: 56px
+              +media-hover
+                &::before
+                  +transition-property(opacity, visibility)
+                  +transition-duration(.3s)
+                  +transition-timing-function(ease)
+              +media-hover-style
+                &::before
+                  visibility: visible
+                  opacity: 1
             .actions
               .list-item
                 + .list-item
@@ -288,28 +316,31 @@
                   height: 36px
                   font-size: 20px
                 .txt
+                  position: relative
                   font-size: 14px
             .menu
               .list-item
                 + .list-item
                   margin-top: 20px
                 .icon-block
+                  +flex-shrink(0)
                   width: 36px
                   height: 36px
+                  margin-right: 15px
                   border: 1px solid #ffffff
                   color: $main-blue
                   +h-gradient(#FAFAFA, #F9F9F9)
                   box-shadow: 3px 3px 5px rgba(0,0,0,.075)
                 .title
-                  margin-left: 15px
+                  +flex-grow(1)
                   .txt
                     font-size: 14px
-                a
-                  border-radius: 36px
-                  +media-hover
-                    +transition-property(background-color)
-                  +media-hover-style
-                    background-color: #f8f8f8
+                  .count
+                    +btn-rounded(18px)
+                    padding: 0 7.5px
+                    background-color: $light-blue
+                    color: #ffffff
+                    font-size: 11px
           &.show
             .user-more-dropdown
               margin-top: 10px
@@ -342,3 +373,42 @@
         &.show
           .lang-dropdown
             margin-top: 20px
+    +media-min(1500px)
+      .topbar-links
+        .mainlinks
+          .ml-category
+            .ml-dd
+              .ml-dd-inner
+                padding-left: 30px
+                padding-right: 30px
+      .topbar-user
+        padding-right: 15px
+    +media-max(1399px)
+      .topbar-links
+        .mainlinks
+          margin-left: 1.5vw
+          .ml-category
+            + .ml-category
+              margin-left: 0
+            .ml-tt
+              padding: 0 1.25vw
+              font-size: 16px
+            .ml-dd
+              .category-list
+                width: calc(100% - 150px)
+                .game
+                  + .game
+                    margin-left: 1vw
+              .category-info
+                width: 135px
+                .title
+                  font-size: 30px
+                .percentage
+                  .num
+                    font-size: 65px
+    +media-max(1280px)
+      .topbar-links
+        .mainlinks
+          .ml-category
+            .ml-tt
+              padding: 0 15px
